--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "buffer": "^5.1.0",
     "ethereumjs-util": "^5.2.0",
     "go-network-framework": "^0.1.1",
+    "native-base": "^2.4.5",
     "node-libs-browser": "^2.1.0",
     "process": "^0.11.10",
     "react": "16.3.1",
