--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "assert": "^1.4.1",
     "buffer": "^5.1.0",
     "ethereumjs-util": "^5.2.0",
+    "ethereumjs-wallet": "^0.6.0",
     "go-network-framework": "^0.1.1",
     "native-base": "^2.4.5",
     "node-libs-browser": "^2.1.0",
