--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "react-native-paho-mqtt": "*",
     "react-native-securerandom": "^0.1.1",
     "react-native-vector-icons": "^4.6.0",
+    "react-navigation": "^2.9.3",
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.0",
     "rxjs": "^5.5.11"
   },
   "devDependencies": {
